Calculation of HSe
Added the calculation of Hse by two methods. The assumption of a finite
population for units where greater than 10% of the subunits are tested
and an assumption of an infinite population for those units where
less than 10% of the subunits are tested.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,8 @@
 
 export(EffProbInf)
 export(adjusted_risk)
+export(hse)
+export(hse_finite)
+export(hse_infinite)
 export(sample_data)
 import(stats)
