Added temporal discounting
Added fucntion to calculate the prior and posterior probabilities of
freedom after each year of surveillance. These are complimentary to
those presented by MArtin et al because we use probability of freedom as
opposed to the probability of infection.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(adjusted_risk)
 export(hse)
 export(hse_finite)
 export(hse_infinite)
+export(post_fr)
+export(prior_fr)
 export(sample_data)
 export(sysse)
 import(stats)
