--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(hse_finite)
 export(hse_infinite)
 export(post_fr)
 export(prior_fr)
+export(rpert)
 export(sample_data)
 export(sysse)
 import(stats)
