--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: freedom
-Title: Demonstations of Disease Freedom (DDF)
+Title: Demonstation of Disease Freedom (DDF)
 Version: 0.1
-Date: 2016-10-03
+Date: 2020-08-24
 Author: Thomas Rosendal
-Maintainer: Thomas Rosendal <thomas.rosendal@sva.se>
-Description: The package will perform freedom from disease
-    calculations on surveillance data.
+Maintainer: Thomas Rosendal <trosendal@gmail.com>
+Description: Yet another package that implements the folmulae required
+    to calculate freedom from disease according to Cameron and Baldok.
+    calculations on surveillance data. This are the methods used at
+    the Swedish national veterinary institute for our nation disease
+    surveillance programmes.
 License: GPL-3
 Type: Package
 LazyLoad: yes
 Depends: R (>= 3.1.0)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
