--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: freedom
 Title: Demonstration of Disease Freedom (DDF)
 Version: 0.2
-Date: 2020-08-24
-Author: Thomas Rosendal
-Maintainer: Thomas Rosendal <trosendal@gmail.com>
+Authors@R: person("Thomas", "Rosendal", role = c("aut", "cre"),
+                  email = "trosendal@gmail.com",
+                  comment = c(ORCID = "0000-0002-6576-9668"))
 Description: Yet another R-package that implements the formulae required
     to calculate freedom from disease according to Cameron and Baldock
     (1998).  calculations on surveillance data. This are the
     methods used at the Swedish national veterinary institute for our
     nation disease surveillance programmes.
 License: GPL-3
+URL: https://github.com/SVA-SE/freedom
+BugReports: https://github.com/SVA-SE/freedom/issues
 Type: Package
 LazyLoad: yes
-Depends: R (>= 4.0.0)
+Depends: R (>= 4.0)
+Encoding: UTF-8
 RoxygenNote: 7.1.1
