--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Version: 0.2
 Authors@R: person("Thomas", "Rosendal", role = c("aut", "cre"),
                   email = "trosendal@gmail.com",
                   comment = c(ORCID = "0000-0002-6576-9668"))
-Description: Yet another R-package that implements the formulae required
-    to calculate freedom from disease according to Cameron and Baldock
-    (1998).  calculations on surveillance data. This are the
-    methods used at the Swedish national veterinary institute for our
-    nation disease surveillance programmes.
+Description: Yet another R-package that implements the formulae
+    required to calculate freedom from disease according to Cameron
+    and Baldock (1998). These are the methods used at the Swedish
+    national veterinary institute (SVA) to evaluate the performatnce
+    of our nation animal disease surveillance programmes.
 License: GPL-3
 URL: https://github.com/SVA-SE/freedom
 BugReports: https://github.com/SVA-SE/freedom/issues
