--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ URL: https://github.com/SVA-SE/freedom
 BugReports: https://github.com/SVA-SE/freedom/issues
 Type: Package
 LazyLoad: yes
+VignetteBuilder: knitr
+Suggests: knitr, rmarkdown
 Depends: R (>= 4.0)
 Encoding: UTF-8
 RoxygenNote: 7.1.1
