--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Implements the formulae required to calculate freedom
     from disease according to Cameron and Baldock (1998)
     <doi:10.1016/S0167-5877(97)00081-0>. These are the
     methods used at the Swedish national veterinary institute (SVA) to
-    evaluate the performatnce of our nation animal disease
+    evaluate the performance of our nation animal disease
     surveillance programmes.
 License: GPL-3
 URL: https://github.com/SVA-SE/freedom
