Update build process and remove dependancy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,5 @@ export(rpert)
 export(sample_data)
 export(sysse)
 export(sysse_finite)
-import(stats)
 importFrom(stats,rbeta)
+importFrom(stats,rpois)
