Add Collate field
This apparently doesn't matter but, the order the files are read is
platform dependant if you don't have a Collate field and the package
works with this order so I might as well nail that down.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,10 @@ Suggests:
 Depends: R (>= 3.6)
 Encoding: UTF-8
 RoxygenNote: 7.2.3
+Collate:
+    'freedom-package.R'
+    'data_gen.R'
+    'distribution.R'
+    'herd_se.R'
+    'risk.R'
+    'temporal_discounting.R'
